--- a/css/styles.css
+++ b/css/styles.css
@@ -96,3 +96,103 @@ span {
 .contacts-link:focus {
   color: #2196f3;
 }
+
+h1 {
+  background-color: var(--hero-background-color);
+  font-style: normal;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+
+  color: var(--third-text-color);
+}
+
+.hero-button {
+  background-color: #2196f3;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  color: var(--third-text-color);
+}
+
+.peculiarities {
+  background-color: var(--primary-background-color);
+}
+
+.peculiarities-list {
+  list-style: none;
+}
+
+.peculiarities-heading {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--secondary-text-color);
+}
+
+.peculiarities-par {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+
+  letter-spacing: 0.03em;
+
+  color: var(--primary-text-color);
+}
+
+.rubrics {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--secondary-text-color);
+}
+
+.rubrics-examples {
+  list-style: none;
+}
+
+.rubrics-team {
+  list-style: none;
+}
+
+.staff-names {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19px;
+
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--secondary-text-color);
+}
+
+.staff-professions {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.19px;
+
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--primary-text-color);
+}
