--- a/css/styles.css
+++ b/css/styles.css
@@ -196,3 +196,34 @@ h1 {
 
   color: var(--primary-text-color);
 }
+
+.footer {
+  background-color: #2f303a;
+}
+
+.footer-address {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+
+  letter-spacing: 0.03em;
+
+  color: var(--third-text-color);
+}
+
+.footer-contacts {
+  list-style: none;
+}
+
+.mail-phone {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+
+  letter-spacing: 0.03em;
+
+  color: var(--footer-links-color);
+}
