--- a/css/styles.css
+++ b/css/styles.css
@@ -34,22 +34,20 @@ body {
   background-color: var(--header-background-color);
 }
 
-.logo-header {
+.header-logo {
   text-decoration: none;
   color: var(--secondary-text-color);
   font-family: Raleway, sans-serif;
-  font-style: normal;
   font-weight: bold;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
 
-.logo-footer {
+.footer-logo {
   text-decoration: none;
   color: var(--third-text-color);
   font-family: Raleway, sans-serif;
-  font-style: normal;
   font-weight: bold;
   font-size: 26px;
   line-height: 1.19;
@@ -67,7 +65,6 @@ span {
 .nav-link {
   text-decoration: none;
   color: var(--secondary-text-color);
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -86,7 +83,6 @@ span {
 .contacts-link {
   text-decoration: none;
   color: var(--primary-text-color);
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.4;
@@ -99,7 +95,6 @@ span {
 
 h1 {
   background-color: var(--hero-background-color);
-  font-style: normal;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -113,7 +108,6 @@ h1 {
 
 .hero-button {
   background-color: #2196f3;
-  font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
@@ -122,6 +116,8 @@ h1 {
   letter-spacing: 0.06em;
 
   color: var(--third-text-color);
+
+  cursor: pointer;
 }
 
 .peculiarities {
@@ -133,7 +129,6 @@ h1 {
 }
 
 .peculiarities-heading {
-  font-style: normal;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -144,7 +139,6 @@ h1 {
 }
 
 .peculiarities-par {
-  font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -155,7 +149,6 @@ h1 {
 }
 
 .rubrics {
-  font-style: normal;
   font-weight: bold;
   font-size: 36px;
   line-height: 1.17;
@@ -174,7 +167,6 @@ h1 {
 }
 
 .staff-names {
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19px;
@@ -186,7 +178,6 @@ h1 {
 }
 
 .staff-professions {
-  font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.19px;
@@ -202,7 +193,6 @@ h1 {
 }
 
 .footer-address {
-  font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -218,7 +208,6 @@ h1 {
 
 .mail-phone {
   text-decoration: none;
-  font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -234,7 +223,6 @@ h1 {
 
 .filter-button {
   font-family: Roboto;
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -242,11 +230,17 @@ h1 {
   letter-spacing: 0.03em;
 
   color: var(--secondary-text-color);
+
+  cursor: pointer;
+}
+
+.filter-button:hover,
+.filter-button:focus {
+  color: #ffffff;
+  background-color: #2196f3;
 }
 
 .example-items {
-  font-family: Roboto;
-  font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 2;
@@ -265,8 +259,6 @@ h1 {
 }
 
 .example-paragraph {
-  font-family: Roboto;
-  font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.87;
@@ -274,4 +266,9 @@ h1 {
   letter-spacing: 0.03em;
 
   color: var(--primary-text-color);
+}
+
+.mail-phone:hover,
+.mail-phone:focus {
+  color: #2196f3;
 }
