Добавляет "пользовательские" контакты и скрывает логические заголовки секций

--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,8 @@ h1 {
 }
 
 .footer-address {
+  text-decoration: none;
+  font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
